<resources>
    <string name="app_name">Offers &amp; Needs</string>
    <string name="candidate_string">I Need...</string>
    <string name="employer_string">I am offering...</string>
    <string name="settings_string">Settings</string>
    <string name="profile_string">Profile</string>
    <string name="save_string">Save</string>
    <string name="view_list_string">View List</string>
    <string name="search_string">Search</string>
    <string name="rating_string">Rating</string>
    <string name="name_string">Name</string>
    <string name="description_string">Description</string>
    <string name="phone_string">Phone</string>
    <string name="jobs_string">Jobs</string>
    <string name="services_string">Services</string>
    <string name="helps_string">Helps</string>
    <string name="transports_string">Transports</string>
    <string name="category_string">Category</string>

    <string name="whats_app_string">Whats App</string>
    <string name="waze_string">Waze</string>
    <string name="title_activity_employer_setting">EmployerSetting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
