<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="biz.eastservices.suara.CandidateSettings">

    <android.support.v7.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_terrain_black_24dp"
                app:civ_border_color="#5e1e1e1e"
                app:civ_border_width="1dp" />




            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_name"
                android:hint="@string/name_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false"
                />





            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_description"
                android:hint="@string/description_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false"
                />



            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_phone"
                android:hint="@string/phone_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="phone"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_whats_app"
                android:hint="@string/whats_app_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_waze"
                android:hint="@string/waze_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="text"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false"
                />


            <View
                android:layout_margin="20dp"
                android:background="#2A1e1e1e"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/category_string"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdi_job"
                        android:text="@string/jobs_string"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rdi_help"
                        android:text="@string/helps_string"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <RadioButton
                        android:id="@+id/rdi_services"
                        android:text="@string/services_string"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <RadioButton
                        android:id="@+id/rdi_transport"
                        android:text="@string/transports_string"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btn_save"
                    android:text="@string/save_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

                <Button
                    android:id="@+id/btn_view_list"
                    android:text="@string/view_list_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
