<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="biz.eastservices.suara.CandidateSettings">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_terrain_black_24dp"
                app:civ_border_color="#5e1e1e1e"
                app:civ_border_width="1dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_string"
                android:inputType="text"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_string"
                android:inputType="phone"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_whats_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/whats_app_string"
                android:inputType="text"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_waze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/waze_string"
                android:inputType="text"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="false" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="#2A1e1e1e" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btn_save"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_string" />

                <Button
                    android:id="@+id/btn_view_list"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_list_string" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
