<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="biz.eastservices.suara.CandidateSettings">

    <android.support.v7.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/image_width_height"
                android:layout_height="@dimen/image_width_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_terrain_black_24dp"
                app:civ_border_color="#5e1e1e1e"
                app:civ_border_width="1dp" />


            <TextView
                android:id="@+id/txt_name"
                android:layout_gravity="center_horizontal"
                android:text="Name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/txt_description"
                android:layout_gravity="center_horizontal"
                android:text="Description"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_whats_app"
                android:text="@string/whats_app_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <Button
                android:id="@+id/btn_waze"
                android:text="@string/waze_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <RatingBar
                android:id="@+id/ratingBar"
                android:rating="0"
                android:max="5"
                android:isIndicator="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_rating"
                android:text="@string/rating_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
